[metadata]
name = tse-index
version = 0.0.4
author = Alised
author_email = seddighi.ali@gmail.com
description = Indices of Tehran Stock Exchange
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alised/tse-index
project_urls =
    Bug Tracker = https://github.com/alised/tse-index/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.20.3
	pandas>=1.3.2
	jdatetime>=3.6.2
	requests>=2.26.0
	beautifulsoup4>=4.10.0
	lxml>=4.6.3

[options.packages.find]
where = .
